Handle the RemovalNotAllowedException in the AbstractWebController as an UNAUTHORIZED